# LoginPage

./: .flake8  CHANGELOG.md  CONTRIBUTING.md  README.md  guideline.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  main.yml
docs/: api_spec.md  architecture.md  database.md  setup.md
scripts/: setup_dev.sh
src/: app.py  init_db.py  models.py  schemas.py
src/auth/: __init__.py  routes.py  services.py
src/core/: database.py
src/login_app/: __init__.py  app.py
src/login_app/domain/: __init__.py
src/login_app/domain/models/: __init__.py  user.py
src/login_app/domain/repositories/: __init__.py  user_repository.py
src/login_app/infrastructure/: __init__.py  database.py  sqlite_user_repository.py
src/login_app/infrastructure/security/: password.py
src/login_app/interface/: session.py
src/login_app/interfaces/controllers/: auth_controller.py  dashboard_controller.py
src/login_app/interfaces/templates/: base.html  dashboard.html  login.html  register.html
src/login_app/usecases/: __init__.py  auth_usecase.py
src/main/: __init__.py  routes.py
src/static/css/: style.css
src/static/js/: script.js
src/templates/: base.html  dashboard.html  login.html  register.html
tests/: conftest.py
tests/integration/: test_auth_routes.py  test_endpoints.py  test_main_routes.py
tests/unit/: test_auth_services.py  test_auth_usecase.py  test_models.py  test_password.py  test_schemas.py  test_sqlite_user_repository.py
